# RoboterSimulation

./: .gitignore  Eric_viewModel.py  README.md  main.py  pyproject.toml
Model/: Axis.py  CncInterpreter.py  RobotConfig.py  Scara.py  h-bot.py  hBot.py  programm.nc
Model/cnc_interpreter/: main.py  main1.py  programm.nc
Tasks/: Task_1.md  Task_2.md  Task_3.md  Task_4.md
View/: HBot.py  Magazin.stl  MagazinViewPV.py  Magazin_gefuellt.stl  Scara.py  magazin-3.py  magazin.py
View/H-Bot Modell/: H-Bot 1.stl  H-Bot 3.stl
View/H_Bot_Modell/: H-Bot 2.stl  H-Bot 5.stl
View/Magazin_Modell/: Magazin_Schieber.stl  Magazin_V2.stl  Roh_Teil.stl  readme.txt
View/Scara_Modell/: Spindle.stl
View/data/: Base.stl  Info.txt  InnerArm.stl  OuterArm.stl
ViewModel/: H-Bot  H-Bot.py  Magazin_gefuellt.stl  RobotController.py  hmi.py  hmiControl.py  hmiState.py  magazin-2.py  main.py  main_viewModel.py  readme.txt  viewModel.py  viewModel_Tiago.py  viewScadaRoboter.py
