[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mein_pyvista_projekt"
version = "0.1.0"
description = "Ein 3D-Visualisierungsprojekt basierend auf PyVista"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Dein Name", email = "dein.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Wichtig: Die eckigen Klammern müssen in Anführungszeichen stehen
    "pyvista[all]>=0.43.0",
]
